# pass-cli

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  mypy.ini  pyproject.toml  setup.py
.github/workflows/: ci.yml  pre-commit.yml
pm/scripts/: manager.py  password.py
tests/scripts/: test_password.py
