[tool.poetry]
name = "pass-cli"
version = "0.1.0"
description = ""
authors = ["rajesh <rajesh.k.khadka@gmail.com>"]
readme = "README.md"
packages = [{ include = "pass_cli" }]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
mypy = "^0.990"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
codecov = "^2.1.12"
pytest-cov = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
